Fix z-index of search menu

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -2,6 +2,7 @@
   display: none;
 
   position: absolute;
+  z-index: $zindex-search-menu;
   width: 100%;
 
   background: rgba($navbar-bg, .98);
